@@ -22,7 +22,8 @@ $if statuscode == 0 or statuscode == 2 or not project:
             $for group, parameters in parameterdata:
                 <parametergroup name="$group">
                     $for parameter in parameters:
-                        $:parameter.xml()
+                       $if parameter.access(user):
+                         $:parameter.xml()
                 </parametergroup>
         </parameters>
 $if statuscode == 0 or datafile or not project:
